syntax = "proto3";

package portfolio;

import "models/portfolio/portfolio.proto";
import "requests/portfolio/portfolio_request.proto";

option java_multiple_files = true;
option java_package = "common.request";
option java_outer_classname = "PortfolioResponseProtos";

message PortfolioResponseProto {
  string object_class = 1;
  string version = 2;

  portfolio.PortfolioRequestProto create_portfolio_request = 20;

  repeated portfolio.PortfolioProto portfolio_response = 30;
}


